@@ -1,3 +1,9 @@
+2009-09-23  higepon  <higepon@users.sourceforge.jp>
+
+	* lib/mosh/jit/test.ss: REFER_LOCAL_PUSH_CONSTAT.
+
+	* main.cpp : Added -O option, shows vm-register offset.
+
 2009-09-17  higepon  <higepon@users.sourceforge.jp>
 
 	* CompilerProcedures.cpp : Added u8-list->c-procedure.
